--- a/boot/Makefile
+++ b/boot/Makefile
@@ -19,7 +19,7 @@ VERSION := $(shell hg -q id 2>/dev/null || echo unknown)
 CFLAGS += -DLDR_VERSION=\"$(VERSION)\"
 
 A_OBJS := $(O)/init.o $(O)/mbm.o
-C_OBJS := $(O)/main.o $(O)/images.o $(O)/console.o $(O)/vsprintf.o $(O)/printf.o $(O)/memstr.o $(O)/atag.o $(O)/crc32.o
+C_OBJS := $(O)/main.o $(O)/images.o $(O)/console.o $(O)/vsprintf.o $(O)/printf.o $(O)/memstr.o $(O)/atag.o $(O)/crc32.o $(O)/hw_misc.o
 OBJS := $(A_OBJS) $(C_OBJS)
 
 $(O)/%.o : %.c
